--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "electron-dev": "ELECTRON_START_URL=http://localhost:3000 node_modules/.bin/electron ."
+    "dev" : "nf start",
+    "electron-dev": "ELECTRON_START_URL=http://localhost:3000 node_modules/.bin/electron electron.index.js"
   }
 }
