--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "localreps",
   "version": "0.1.0",
   "private": true,
+  "main": "./electron.index.js",
   "homepage": "./",
   "devDependencies": {
     "electron": "^1.4.15",
-    "electron-prebuilt-compile": "^1.4.15",
+    "electron-packager": "^8.5.1",
     "foreman": "^2.0.0",
     "react-scripts": "0.8.5"
   },
@@ -19,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "dev" : "nf start",
+    "dev": "nf start",
     "electron-dev": "ELECTRON_START_URL=http://localhost:3000 node_modules/.bin/electron electron.index.js"
   }
 }
