--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev": "nf start",
-    "electron-dev": "ELECTRON_START_URL=http://localhost:3000 node_modules/.bin/electron electron.index.js"
+    "electron-dev": "node_modules/.bin/electron electron.index.js"
   }
 }
