--- a/.babelrc
+++ b/.babelrc
@@ -1,1 +1,4 @@
-{ "presets": ["es2015", "react"] }
+{
+    "presets": ["es2015", "react"],
+    "plugins": ["import", { "libraryName": "antd", "style": "css" }]
+ }
