--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "0.8.5"
   },
   "dependencies": {
+    "antd": "^2.6.4",
     "menubar": "^5.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
