--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "dev": "nf start",
-    "electron-dev": "node_modules/.bin/electron electron.index.js"
+    "electron-dev": "node_modules/.bin/electron electron.index.js",
+    "electorn-build": "node_modules/.bin/electron-packager . localReps --platform=darwin --arch=x64  --out=release-builds --overwrite  --ignore=\"\\electron-wait-react.js\" --icon=./public/Icon.icns"
   }
 }
