--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "eject": "react-scripts eject",
     "dev": "nf start",
     "electron-dev": "node_modules/.bin/electron electron.index.js",
-    "electorn-build": "node_modules/.bin/electron-packager . localReps --platform=darwin --arch=x64  --out=release-builds --overwrite  --ignore=\"\\electron-wait-react.js\" --icon=./public/Icon.icns"
+    "electron-build": "node_modules/.bin/electron-packager . localReps --platform=darwin --arch=x64  --out=release-builds --overwrite  --ignore=\"\\electron-wait-react.js\" --icon=./public/Icon.icns"
   },
   "theme": {
     "primary-color": "#1DA57A"
