--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "electron": "^1.4.15",
+    "electron-osx-sign": "^0.4.4",
     "electron-packager": "^8.5.1",
     "foreman": "^2.0.0",
     "less": "^2.7.2",
@@ -33,7 +34,8 @@
     "eject": "react-scripts eject",
     "dev": "nf start",
     "electron-dev": "node_modules/.bin/electron electron.index.js",
-    "electron-build": "node_modules/.bin/electron-packager . localReps --platform=darwin --arch=x64  --out=release-builds --overwrite  --ignore=\"\\electron-wait-react.js\" --icon=./public/Icon.icns"
+    "electron-build": "node_modules/.bin/electron-packager . localReps --platform=darwin --arch=x64  --out=release-builds --overwrite  --ignore=\"\\electron-wait-react.js\" --icon=./public/Icon.icns",
+    "shipit": "npm-run-all build electron-build"
   },
   "theme": {
     "primary-color": "#1DA57A"
