--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "menubar": "^5.2.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-motion": "^0.4.7"
+    "react-motion": "^0.4.7",
+    "ttab": "^0.5.0"
   },
   "scripts": {
     "start-js": "react-scripts start",
