--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "antd": "^2.6.4",
     "menubar": "^5.2.0",
+    "pubsub-js": "^1.5.6",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-motion": "^0.4.7",
